tests/negative/neg_case_on_string.safe
-- Test: neg_case_on_string
-- Description: String case choices reject non-literal call expressions.
-- Expected: REJECT unsupported_source_construct

package neg_case_on_string

   function lookup returns string
      return "Ada"

   name : string = "Ada"
   code : integer = 0

   case name
      when lookup ()
         code = 1
      when others
         code = 0

   print (code)
